--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ I abandoned shortly. And the righteous: but each shall, moreover, be in the time
           </div>
 
           <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials3.jpG" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/testimonials3.jpg" class="testimonial-img" alt="">
             <h3>Ms. Bansi Patel</h3>
             <h4>Store Owner</h4>
             <p>
@@ -427,7 +427,7 @@ I abandoned shortly. And the righteous: but each shall, moreover, be in the time
           </div>
 			
 			 <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials6.JPG" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/testimonials6.jpg" class="testimonial-img" alt="">
             <h3>Ms. Dinal Korat </h3>
             <h4>Entrepreneur</h4>
             <p>
@@ -438,7 +438,7 @@ I abandoned shortly. And the righteous: but each shall, moreover, be in the time
           </div>
 
 			 <div class="testimonial-item">
-            <img src="assets/img/testimonials/testimonials7.jpG" class="testimonial-img" alt="">
+            <img src="assets/img/testimonials/testimonials7.jpg" class="testimonial-img" alt="">
             <h3>Ms. Dhara Patel</h3>
             <h4>Entrepreneur</h4>
             <p>
